--- a/css/task.html
+++ b/css/task.html
@@ -1,124 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="task.CSS">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <div class="task1">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
 
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
 
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nam tempora ea officiis exercitationem, vitae
+            nostrum sit quasi eius, doloremque in ipsum culpa! Iste, illo nisi itaque suscipit aliquam qui.
 
-    </p>
-</div> 
-<div class="task2">
-    <p>Text</p>
-    <p>Text</p>
-    <p>Text</p>
-    <p>Text</p>
-    <p>Text</p>
-    <p>Text</p>
-    <p>Text</p>
-</div>
-<div class="task3">
-    <h1>Home</h1>
-    <p>About</p>
-    <p>Services</p>
-    <p>Products</p>
-</div>
-<div class="task4">
-    <p>text1</p>
-    <p>text2</p>
-    <p>text3</p>
-    <p>text4</p>
-</div>
-<table border="1" width="30%">
-    <tr>
-        <th>No</th>
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Age</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Lena</td>
-        <td>Smith</td>
-        <td>18</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>nicol</td>
-        <td>Green</td>
-        <td>17</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>tom</td>
-        <td>taylor</td>
-        <td>17</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Paul</td>
-        <td>Miller</td>
-        <td>20</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>Alen</td>
-        <td>Lee</td>
-        <td>22</td>
-    </tr>
-</table>
+        </p>
+    </div>
+    <div class="task2">
+        <p>Text</p>
+        <p>Text</p>
+        <p>Text</p>
+        <p>Text</p>
+        <p>Text</p>
+        <p>Text</p>
+        <p>Text</p>
+    </div>
+    <div class="task3">
+        <p>Home</p>
+        <p>About</p>
+        <p>Services</p>
+        <p>Products</p>
+    </div>
+    <div class="task4">
+        <p>text1</p>
+        <p>text2</p>
+        <p>text3</p>
+        <p>text4</p>
+    </div>
+    <table border="1" width="30%">
+        <tr>
+            <th>No</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Lena</td>
+            <td>Smith</td>
+            <td>18</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>nicol</td>
+            <td>Green</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>tom</td>
+            <td>taylor</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Paul</td>
+            <td>Miller</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Alen</td>
+            <td>Lee</td>
+            <td>22</td>
+        </tr>
+    </table>
 
-<div class="task6">
+    <div class="task6">
 
-	<div class="bir"></div>
-	<div class="iki"></div>
-	<div class="uc"></div>
-	<div class="dord"></div><br>
-	<div class="bes"></div>
-	<div class="alti"></div>
-	<div class="yeddi"></div>
-	<div class="sekkiz"></div>
-</div>
-<div class="main"> 
-<div class="header1">Header</div>
-<div class="header2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ratione esse dolor, iusto alias, eaque mollitia qui nemo fugit expedita neque est excepturi quos cum reiciendis illum corrupti officiis ullam.</div>
-<div class="header3">Footer</div>
-</div>
+        <div class="bir"></div>
+        <div class="iki"></div>
+        <div class="uc"></div>
+        <div class="dord"></div><br>
+        <div class="bes"></div>
+        <div class="alti"></div>
+        <div class="yeddi"></div>
+        <div class="sekkiz"></div>
+    </div>
+    <div class="task7">
+        <div class="header1">
+            Header
+        </div>
+        <div class="header2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magnam optio quia voluptas
+            nostrum? Nihil, quo aperiam aliquid eaque asperiores dolorum voluptas. Saepe molestiae labore, voluptatem
+            laborum distinctio inventore unde! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt
+            corporis repudiandae dolore similique enim soluta iste sunt inventore earum. Consequatur quaerat odit rem
+            quo accusamus, nulla unde commodi necessitatibus totam? Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit. Perspiciatis minus ducimus eius libero labore ipsam doloremque minima dolore impedit. Exercitationem
+            eligendi aliquid porro modi recusandae repellendus alias molestias cumque obcaecati. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Officia dolorum ullam odit nulla! A velit eum, eveniet ad recusandae
+            ullam tempora voluptatum maiores libero harum ipsa, tenetur fuga! Sequi, eum?</div>
+        <div class="header3">Footer</div>
+    </div>
 
-<div class="main">
-<div class="image1">
-    <img src="https://cdn.vectorstock.com/i/1000x1000/60/28/woman-icon-on-white-background-symbol-person-vector-29656028.webp" as="image" type="image/webp">
-</div>
-</div>
+    <div class="task8">
+        
+            <img src="https://static.vecteezy.com/system/resources/previews/005/965/035/non_2x/business-woman-female-user-icon-free-vector.jpg" alt="">
+            <h1>Jane Doe</h1>
+            <p>Interior designer</p>
+    </div>
+
+
 </body>
 
 </html>
