--- a/css/css1/stylish.html
+++ b/css/css1/stylish.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
 
 </head>
+
 <body>
     <!-- stylis1 -->
     <header class="main">
@@ -65,100 +66,102 @@
             </div>
         </div>
     </div>
-            <!-- stylis4 -->
-            <header class="main2">
-                <div class="fon2">
-                    <h1 class="text3">Welcome to <i>your</i></h1>
-                    <h1 class="text4">next website!</h1>
-                    <div class="button3"> <a href="google.com">Download More!</a></div>
-                </div>
-            </header>
-            <!-- stylish5 -->
-            <div class="sekiller">
-                <div class="dordlu">
-                    <div class="basliq">
-                        <h1 class="text5">PORTFOLIO</h1>
-                        <h1 class="text6">Recent Projects</h1>
-                    </div>
-                    <div class="saxla">
-                    <div class="mavi">
-                        <div class="sekil lor">
-                            <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-1.jpg"
-                                alt="">
-                        </div>
-                        <div class="fon1 a">
-                            <h1>STATIONARY</h1>
-                            <p>A yellow pencil with envelopes on a clean,blue backdrop!</p>
-                        </div>
-                    </div>
-                    <div class="mavi2">
-                        <div class="sekil ler">
-                            <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-2.jpg"
-                                alt="">
-                        </div>
-                        <div class="fon1 b">
-                            <h1>ICE CREAM </h1>
-                            <p>A dark blure background with a colored pencil,a clip,and a tiny ice cream cone! </p>
-                        </div>
-                    </div>
-                    <div class="mavi3">
-                        <div class="sekil lar">
-                            <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-3.jpg"
-                                alt="">
-                        </div>
-                        <div class="fon1 c">
-                            <h1>STRAWBERRY</h1>
-                            <p>Strawberries are such a tasty snack,especially with a little sugar on top!</p>
-                        </div>
-                    </div>
-                    <div class="mavi4">
-                        <div class="sekil larr">
-                            <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-4.jpg"
-                                alt="">
-                        </div>
-                        <div class="fon1 d">
-                            <h1>WORKSPACE</h1>
-                            <p>A yellow workspace with some scissors,pencils,and other objects.</p>
-                        </div>
-                    </div>
-                </div>
-                </div>
-                </div>
-                <!-- stlish6 -->
-                <div class="back2">
-                    <div class="on"><p>The buttons below are impossible to resist...</p></div>
-                <div class="onlar">
-                    <div class="ona">
-                        <a href="click">Click Me!</a>
-                    </div>
-                    <div class="onu">
-                        <a href="click2">Look at Me!</a>
-                    </div>
-                </div> 
+    <!-- stylis4 -->
+    <header class="main2">
+        <div class="fon2">
+            <h1 class="text3">Welcome to <i>your</i></h1>
+            <h1 class="text4">next website!</h1>
+            <div class="button3"> <a href="google.com">Download More!</a></div>
+        </div>
+    </header>
+    <!-- stylish5 -->
+    <div class="sekiller">
+        <div class="dordlu">
+            <div class="basliq">
+                <h1 class="text5">PORTFOLIO</h1>
+                <h1 class="text6">Recent Projects</h1>
             </div>
-                <!-- stylish7-->
-                <div class="map" id="contact">
-                    <iframe
-                        src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+            <div class="saxla">
+                <div class="mavi">
+                    <div class="sekil lor">
+                        <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-1.jpg"
+                            alt="">
+                    </div>
+                    <div class="fon1">
+                        <h1>STATIONARY</h1>
+                        <p>A yellow pencil with envelopes on a clean,blue backdrop!</p>
+                    </div>
                 </div>
-                <!-- stylish8 -->
-                <footer class="footer text">
-                    <div class="son">
-                        <div class="link2">
-                            <a class="face" href=""><i class="fa-brands fa-facebook-f"></i></a>
-                        </div>
-                        <div class="link3">
-                            <a class="twitter" href=""><i class="fa-brands fa-twitter"></i>
-                        </div>
-                        <div class="link4">
-                            <a class="git" href=""><i class="fa-brands fa-github"></i></a>
-                        </div> 
-                </footer>
-                <div class="sontext">
-                    <p class="sonntext">Copyright © Your Website 2023</p>
+                <div class="mavi2">
+                    <div class="sekil ler">
+                        <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-2.jpg"
+                            alt="">
+                    </div>
+                    <div class="fon1">
+                        <h1>ICE CREAM </h1>
+                        <p>A dark blure background with a colored pencil,a clip,and a tiny ice cream cone! </p>
+                    </div>
                 </div>
-                   
-           
+                <div class="mavi3">
+                    <div class="sekil lar">
+                        <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-3.jpg"
+                            alt="">
+                    </div>
+                    <div class="fon1">
+                        <h1>STRAWBERRY</h1>
+                        <p>Strawberries are such a tasty snack,especially with a little sugar on top!</p>
+                    </div>
+                </div>
+                <div class="mavi4">
+                    <div class="sekil larr">
+                        <img src="https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/portfolio-4.jpg"
+                            alt="">
+                    </div>
+                    <div class="fon1">
+                        <h1>WORKSPACE</h1>
+                        <p>A yellow workspace with some scissors,pencils,and other objects.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- stlish6 -->
+    <div class="back2">
+        <div class="on">
+            <p>The buttons below are impossible to resist...</p>
+        </div>
+        <div class="onlar">
+            <div class="ona">
+                <a href="click">Click Me!</a>
+            </div>
+            <div class="onu">
+                <a href="click2">Look at Me!</a>
+            </div>
+        </div>
+    </div>
+    <!-- stylish7-->
+    <div class="map" id="contact">
+        <iframe
+            src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+    </div>
+    <!-- stylish8 -->
+    <footer class="footer text">
+        <div class="son">
+            <div class="link2">
+                <a class="face" href=""><i class="fa-brands fa-facebook-f"></i></a>
+            </div>
+            <div class="link3">
+                <a class="twitter" href=""><i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="link4">
+                <a class="git" href=""><i class="fa-brands fa-github"></i></a>
+            </div>
+    </footer>
+    <div class="sontext">
+        <p class="sonntext">Copyright © Your Website 2023</p>
+    </div>
+
+
 
 </body>
 
