--- a/css/css3/starbootstrap.html
+++ b/css/css3/starbootstrap.html
@@ -19,124 +19,125 @@
     <header>
         <div class="header">
             <h1>START BOOTSTRAP</h1>
+        </div>
+        <div class="header_2">
             <ul>
-                <li type="none"><a href="#">PORTFOLIO</a></li>
-                <li type="none"><a href="#">ABOUT</a></li>
-                <li type="none"><a href="#">CONTACT</a></li>
+                <li type="none"><a href="#portfolio">PORTFOLIO</a></li>
+                <li type="none"><a href="#about">ABOUT</a></li>
+                <li type="none"><a href="#contact">CONTACT</a></li>
             </ul>
         </div>
     </header>
-        <!-- hisse2 -->
-        <div class="back">
-            <div class="img">
-                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
-            </div>
-            <h1>START BOOTSTRAP</h1>
-            <div class="line">
+    <!-- hisse2 -->
+    <div class="back">
+        <div class="img">
+            <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
+        </div>
+        <h1>START BOOTSTRAP</h1>
+        <div class="line">
             <div class="row"></div>
-            <div class="star" ><i class="fa-solid fa-star"></i></div>
+            <div class="star"><i class="fa-solid fa-star"></i></div>
             <div class="row"></div>
         </div>
-            <h4>Graphic Artist -</h4>
-            <h4>Web Designer -</h4>
-            <h4>Illustrator</h4>
-        </div>
-        <!-- hisse3 -->
-        <div class="portfo">
-            <h1>PORTFOLIO</h1>
+        <h4>Graphic Artist -</h4>
+        <h4>Web Designer -</h4>
+        <h4>Illustrator</h4>
+    </div>
+    <!-- hisse3 -->
+    <div class="portfo" id="portfolio">
+        <h1>PORTFOLIO</h1>
         <div class="line2">
             <div class="row1"></div>
-            <div class="star1" ><i class="fa-solid fa-star"></i></div>
+            <div class="star1"><i class="fa-solid fa-star"></i></div>
             <div class="row1"></div>
         </div>
         <div class="sekil">
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png"
                     alt="">
-                    <div class="owerlay">
-                       <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                    </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png"
                     alt="">
-                    <div class="owerlay">
-                        <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                     </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png"
                     alt="">
-                    <div class="owerlay">
-                        <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                     </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png"
                     alt="">
-                    <div class="owerlay">
-                        <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                     </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png"
                     alt="">
-                    <div class="owerlay">
-                        <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                     </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
             <div class="box">
                 <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png"
                     alt="">
-                    <div class="owerlay">
-                        <div class="plus"><i class="fa-solid fa-plus"></i></div> 
-                     </div>
+                <div class="owerlay">
+                    <div class="plus"><i class="fa-solid fa-plus"></i></div>
+                </div>
             </div>
         </div>
     </div>
- <!-- hisse4 -->
- <div class="about">
-    <div class="back2">
-        <h1>ABOUT</h1>
-        <div class="line3">
-        <div class="row3"></div>
-        <div class="star3" ><i class="fa-solid fa-star"></i></div>
-        <div class="row3"></div>
+    <!-- hisse4 -->
+    <div class="about" id="about">
+        <div class="back2">
+            <h1>ABOUT</h1>
+            <div class="line3">
+                <div class="row3"></div>
+                <div class="star3"><i class="fa-solid fa-star"></i></div>
+                <div class="row3"></div>
+            </div>
+            <div class="text">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
+                    source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy
+                    customization.</p>
+                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your
+                    email address to the contact form to make it fully functional!</p>
+            </div>
+            <div class="button">
+                <i class="fa-solid fa-download"></i>
+                <p>Free Download!</p>
+            </div>
+        </div>
     </div>
-    <div class="text">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
-        <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
-    </div>
-<div class="button">
-   <i class="fa-solid fa-download"></i>
-   <p>Free Download!</p>
-</div>
- </div>
-</div>
-<!-- hisse5 -->
-<div class="contact">
-    <div class="head">
-        <h1>CONTACT ME</h1>
-        <div class="line4">
-        <div class="row4"></div>
-        <div class="star4" ><i class="fa-solid fa-star"></i></div>
-        <div class="row4"></div>
-    </div>
-<div class="esas5">
-    <form action="" class="item7">
-    <label for="name">Full name</label>
-    <input type="text" placeholder="Enter your name..." >
-    <label for="email">Email address</label>
-    <input type="email" placeholder="name@example.com">
-    <label for="phone">Phone number</label>
-    <input type="tel" placeholder="(123) 456-7890">
-    <label for="message">Message</label>
-    <textarea type="text" placeholder="Enter your message here..." ></textarea>
-</form>
-</div>
+    <!-- hisse5 -->
+    <div class="contact" id="contact">
+        <div class="head">
+            <h1>CONTACT ME</h1>
+            <div class="line4">
+                <div class="row4"></div>
+                <div class="star4"><i class="fa-solid fa-star"></i></div>
+                <div class="row4"></div>
+            </div>
+            <div class="esas5">
+                <form action="" class="item7">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email adress">
+                    <input type="tel" placeholder="Phone number">
+                    <textarea type="text" placeholder="Message"></textarea>
+                </form>
+            </div>
             <div class="button2">
                 <p>Send</p>
-             </div>
+            </div>
         </div>
         <!-- hisse6 -->
         <div class="back3">
@@ -144,19 +145,23 @@
                 <h1>LOCATION</h1>
                 <p>2215 John Daniel Drive
                     Clark,
-                    <br> MO 65243</p>
+                    <br> MO 65243
+                </p>
             </div>
             <div class="web">
+                <div>
                 <h1>AROUND THE WEB</h1>
                 <i class="fa-brands fa-facebook-f"></i>
                 <i class="fa-brands fa-twitter"></i>
                 <i class="fa-brands fa-instagram"></i>
                 <i class="fa-solid fa-basketball"></i>
             </div>
+            </div>
             <div class="free">
                 <h1>ABOUT FREELANCER</h1>
                 <p>Freelance is a free to use, MIT licensed
-                    <br> Bootstrap theme created by <a href="http:/#/">Start Bootstrap</a>.</p> 
+                    <br> Bootstrap theme created by <a href="http:/#/">Start Bootstrap</a>.
+                </p>
             </div>
         </div>
 
